--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,12 +30,7 @@ jobs:
         sudo apt update && sudo apt install -qy just
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Conda setup
-      run: |
-        mkdir -p ~/miniconda3
-        wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
-        bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
-        rm -rf ~/miniconda3/miniconda.sh
-        ~/miniconda3/bin/conda init bash
+      uses: conda-incubator/setup-miniconda@v3
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
