set thing to use bash

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,8 +13,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
